Issue #21063 use bean-defining annotation instead of qualfier for Template